--- a/recipes/tomato-pasta.html
+++ b/recipes/tomato-pasta.html
@@ -1,3 +1,4 @@
+<title>Tomato Pasta - Odin Recipes</title>
 <h1>Tomato Pasta</h1>
 <img src="https://static01.nyt.com/images/2023/07/14/multimedia/hew-grated-tomato-pasta-kzhw/hew-grated-tomato-pasta-kzhw-superJumbo.jpg" width="500">
 
