Add the css file to affect all of the HTMLs.

--- a/recipes/tomato-pasta.html
+++ b/recipes/tomato-pasta.html
@@ -1,11 +1,19 @@
+<head>
 <title>Tomato Pasta - Odin Recipes</title>
+<link rel="stylesheet" href="../styles.css">
+</head>
+
+<h1 id="title">Odin Recipes</h1>
+
+<div class="intro">
 <h1>Tomato Pasta</h1>
-<img src="https://static01.nyt.com/images/2023/07/14/multimedia/hew-grated-tomato-pasta-kzhw/hew-grated-tomato-pasta-kzhw-superJumbo.jpg" width="500">
+<img src="https://static01.nyt.com/images/2023/07/14/multimedia/hew-grated-tomato-pasta-kzhw/hew-grated-tomato-pasta-kzhw-superJumbo.jpg" class="img">
 
     <h2>Description</h2>
-        <p>The "straight out of Italian Grandmother's Pan" recipe <br>
-        that we collected for you from the poetical villages of eastern Italy</p>
-
+        <p>The "straight out of Italian Grandmother's Pan" recipe that we collected for you from the poetical villages of eastern Italy</p>
+</div>
+    
+<div class="ing-steps">
     <h3>Ingredients</h3>
 
         <!-- Ingredients in a list - not in order! -->
@@ -32,3 +40,5 @@
             <li>After you put it into plates, add parmesan and 2-3 leaves of basilikum on top.</li>
             <li>Enjoy your meal!</li>
         </ol>
+
+</div>
