--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/tomato-pasta.html">Tomato Pasta</a></li>
-        <li><a href="./recipes/shakshukha.html">Shakshukha</a></li>
-    </ul>
+    <h1 id="title">Odin Recipes</h1>
+    
+        <ul class="recipes">
+            <li><a href="./recipes/lasagna.html" class="recipe-button">Lasagna</a></li>
+            <br>
+            <li><a href="./recipes/tomato-pasta.html" class="recipe-button">Tomato Pasta</a></li>
+            <br>
+            <li><a href="./recipes/shakshukha.html" class="recipe-button">Shakshukha</a></li>
+        </ul>
+
 </body>
 
 </html>
