Change the css completely for the pages.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 <body>
     <h1 id="title">Odin Recipes</h1>
     
-        <ul class="recipes">
-            <li><a href="./recipes/lasagna.html" class="recipe-button">Lasagna</a></li>
-            <br>
-            <li><a href="./recipes/tomato-pasta.html" class="recipe-button">Tomato Pasta</a></li>
-            <br>
-            <li><a href="./recipes/shakshukha.html" class="recipe-button">Shakshukha</a></li>
-        </ul>
-
+        <section class="area">
+            <div><a href="./recipes/lasagna.html" class="button">Lasagna</a></div>
+            <div><a href="./recipes/tomato-pasta.html" class="button">Tomato Pasta</a></div>
+            <div><a href="./recipes/shakshukha.html" class="button">Shakshukha</a></div>
+        </section>    
 </body>
 
 </html>
